# SAutoScript

./: .gitignore  LICENSE  OAS_dev_README.md  README.md  create_template.bat  install.py  main.py  pyproject.toml  requirements.txt  setup.cfg  simple_memory_test.py  start.bat  test_memory_optimization.py
SAutoScript.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
assets/templates/: map_model.py  mapping.json
config/: settings.yaml
core/: __init__.py  base_game_script.py  error_logger.py  game_operations.py  image_recognition.py  input_controller.py  screen_capture.py  window_locator.py
docs/: BaseGameScript_Guide.md  Error_Logging_Guide.md
examples/: example.py
sautoscript/: __init__.py
sautoscript/core/: __init__.py  base_game_script.py  error_logger.py  game_operations.py  image_recognition.py  input_controller.py  screen_capture.py  window_locator.py
scripts/: easy.py  example.py  jiaojiaobi_60.py  letter_clues.py  night_flight_manual_65.py  test.py
scripts/DNA/: easy.py  example.py  jiaojiaobi_60.py  letter_clues.py  night_flight_manual_65.py  template.py  test.py
test/: test_capture_methods.py  test_memory_optimization.py  test_object_pool.py
