[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SAutoScript"
version = "0.1.0"
description = "基于图像识别技术的自动脚本系统"
authors = [
    { name = "SAutoScript Team", email = "shiwangwei771@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opencv-python",
    "pyautogui",
    "pywin32",
    "pydirectinput",
    "Pillow",
    "loguru",
    "pyyaml",
    "psutil",
    "mss"
]

[project.urls]
"Homepage" = "https://github.com/Sthons/SAutoScript"
"Repository" = "https://github.com/Sthons/SAutoScript"
